# hyprbind

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_e2e_tests.sh  test_theme_visual.py
.github/workflows/: e2e-tests.yml
data/: com.hyprbind.HyprBind.desktop
data/ui/: main_window.ui
docs/: MODE_MANAGER_INTEGRATION.md  TASK_21_SUMMARY.md  TASK_22_SUMMARY.md  TASK_24_SUMMARY.md  THEMING.md  e2e-test-results.md
docs/plans/: 2025-01-13-e2e-testing-design.md  2025-01-13-e2e-tests.md  2025-01-21-performance-fixes.md
examples/: mode_manager_demo.py
project-docs/design/: 2025-11-12-hyprbind-design.md
project-docs/plans/: 2025-11-12-hyprbind-implementation.md  2025-11-12-hyprbind-phases-5-7-detailed-plan.md  2025-11-12-plan-review-and-corrections.md  CORRECTIONS-INDEX.md  FINAL-REVIEW.md
src/hyprbind/: __init__.py  __main__.py  main.py
tests/: __init__.py  conftest.py
tests/core/: test_backup_manager.py  test_config_manager.py  test_config_manager_backups.py  test_config_manager_observers.py  test_config_writer.py  test_conflict_detector.py  test_constants.py  test_mode_manager.py  test_models.py  test_sanitizers.py  test_validators.py
tests/data/: test_hyprland_reference.py
tests/e2e/: __init__.py  app_lifecycle.py  conftest.py  gtk_utils.py  test_add_binding.py  test_app_lifecycle.py  test_config_lifecycle.py  test_delete_binding.py  test_edit_binding.py  test_fixtures.py  test_gtk_utils.py  test_mode_switching.py
tests/export/: test_exporter.py
tests/fixtures/: defaults.conf  sample_keybinds.conf  variables.conf
(+59 files in other folders)
