[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyprbind"
version = "0.1.0"
description = "GTK4 GUI configurator for Hyprland keybindings"
authors = [{name = "HyprBind Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.46.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
pdf = [
    "weasyprint>=60.0",
]

[project.scripts]
hyprbind = "hyprbind.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["../data/ui/*.ui", "../data/*.desktop"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=hyprbind --cov-report=html --cov-report=term"

[tool.ruff]
line-length = 100
target-version = "py311"
